--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>omnifaces</artifactId>
             <version>2.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.16</version>
+        </dependency>
 
     </dependencies>
 </project>
